--- a/client/package.json
+++ b/client/package.json
@@ -12,19 +12,24 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.2.8",
     "@angular/common": "^5.2.8",
     "@angular/compiler": "^5.2.8",
+    "@angular/compiler-cli": "^5.2.8",
     "@angular/core": "^5.2.8",
     "@angular/forms": "^5.2.8",
     "@angular/http": "^5.2.8",
     "@angular/platform-browser": "^5.2.8",
     "@angular/platform-browser-dynamic": "^5.2.8",
+    "@angular/platform-server": "^5.2.8",
     "@angular/router": "^5.2.8",
     "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.3",
+    "ngx-bootstrap": "^2.0.2",
     "rxjs": "^5.5.6",
     "socket.io": "^2.0.4",
     "ts-helpers": "^1.1.2",
+    "webpack": "^3.11.0",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
